js refactored event system, will need more work later